Fixed overlapping text

--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9824,9 +9824,13 @@ a.button {
 }
 .user-info{
  padding-top: 20px;
+ height:auto;
+ width: auto;
 }
 #username {
   font-size: 40px;
+  overflow: visible;
+  line-height: 40px;
 }
 #location {
   font-size: 20px;
